[package]
name = "rslsk"
version = "0.1.0"
authors = ["Andrea Bertagnolli <ndr_brt@bruttocarattere.org>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
buffer-redux = "1.0.1"
futures = "0.3.30"
md5 = "0.7.0"
hex = "0.4.0"